# crypto-reg-agent

./: .env.example  .gitignore  README.md  SCOPE.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
app/examples/: tether_usdt.md  uniswap_uni.md
docs/: REQUIREMENTS.md  architecture.md  eu_ai_act_compliance.md  extending_to_new_jurisdictions.md
fixtures/mock_responses/tether_usdt/: stage1_asset_flags.json  stage3_compliance_flags.json  trust_signals.json
fixtures/mock_responses/uniswap/: stage1_asset_flags.json  stage3_compliance_flags.json  trust_signals.json
src/mas/: cli.py  config.py  factory.py  report.py
src/mas/agents/: crawler.py  geckoterminal.py  goplus.py  ratelimit.py  searcher.py
src/mas/audit/: logger.py
src/mas/graph/: builder.py  nodes.py
src/mas/ingest/: reader.py
src/mas/prompts/: loader.py
src/mas/prompts/v1/: asset_flags.md  compliance.md  trust_analysis.md
src/mas/rules/: engine.py
src/mas/rules/micar_v1/: classification.yaml  disclosures.yaml
src/mas/rules/sec_v1/: classification.yaml  disclosures.yaml
src/mas/schemas/: __init__.py  asset_flags.py  classification.py  compliance_flags.py  project.py  report.py  state.py  trust_analysis.py
tests/: conftest.py  test_audit.py  test_crawler.py  test_goplus.py  test_graph.py  test_prompts.py  test_rule_engine.py  test_scan.py  test_schemas.py  test_sec_rules.py  test_trust.py
