[project]
name = "mas"
version = "0.1.0"
description = "MiCAR Compliance Agent — Neuro-symbolic crypto regulation analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Mario Trerotola" }]
dependencies = [
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "trafilatura>=2.0",
    "crawl4ai>=0.4",
    "nest-asyncio>=1.6",
]

[project.optional-dependencies]
ui = ["streamlit>=1.35"]
ingest = ["pymupdf>=1.24"]
cli = ["typer>=0.12"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.10",
    "types-PyYAML",
]
all = ["mas[ui,ingest,cli,dev]"]

[project.scripts]
mas = "mas.cli:app"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/mas/cli.py" = ["B008"]  # typer uses function calls in defaults by design

[tool.ruff.lint.isort]
known-first-party = ["mas"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["live: tests that require a real API key (deselect with '-m not live')"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
